2008-04-04  smeghead <smeghead@users.sourceforge.jp>

    * キーワード検索で、複数語を条件にして検索できるようにした。半角スペースで
    区切って複数の単語を指定して検索する。
    * チケット検索でキーワード検索が一番上にくるように検索条件の順番を変更した。
    * ボタンのcssでhoverでの背景色指定をやめた。

2008-04-03  smeghead <smeghead@users.sourceforge.jp>

    * 0.2.3-beta リリース

2008-04-03  smeghead <smeghead@users.sourceforge.jp>

    * cygwinでコンパイルできるように、Makefileを修正。cygwinでの動作は未確認。
    * テストを修正した。SeleniumIDEで「速く」で実行できるようにした。

2008-03-31  smeghead <smeghead@users.sourceforge.jp>

    * hook機能で外部プログラムに渡すjsonのエスケープ方法が間違っていたのを修正
    した。" より、先に、\をエスケープする必要があったため。

2008-03-30  smeghead <smeghead@users.sourceforge.jp>

    * string_appendf(フォーマット指定文字列追加関数)を追加した。

2008-03-30  smeghead <smeghead@users.sourceforge.jp>

    * 0.2.2-beta リリース

2008-02-28  smeghead <smeghead@users.sourceforge.jp>

    * hook機能で外部プログラムに渡すjsonのエスケープ方法が間違っていたのを修正
    した。" を "" にエスケープしてたのを、 \" に変更した。

2008-03-26  smeghead <smeghead@users.sourceforge.jp>

    * 複数行入力エリア(<textarea>)の値の出力に、値用のエスケープ処理を行なって
    いたのを、HTML用のエスケープ処理に変更した。

2008-03-26  smeghead <smeghead@users.sourceforge.jp>

    * 0.2.1-beta リリース

2008-03-26  smeghead <smeghead@users.sourceforge.jp>

    * hook機能へjsonを送るときに改行コードを\nに変換するようにした。

2008-03-24  smeghead <smeghead@users.sourceforge.jp>

    * 一番後ろの項目を削除後、項目の追加を行なった場合にエラーが発生する問題を
    修正した。
    * テーブルレイアウトの変更。古いdbからの移行を行なうには、下のコマンドを実行し
    てください。
    $ cd db
    $ echo 'alter table element_type add column deleted integer not null default 0;' | sqlite3 starbug1.db

2008-03-21  smeghead <smeghead@users.sourceforge.jp>

    * basic認証のユーザ名を投稿者にデフォルト表示するのをやめた。

2008-03-21  smeghead <smeghead@users.sourceforge.jp>

    * 0.1.6-beta リリース

2008-03-21  smeghead <smeghead@users.sourceforge.jp>

    * cssの調整。

2008-03-19  smeghead <smeghead@users.sourceforge.jp>

    * simple_string.cで、realloc時のサイズ指定を修正。

2008-03-18  smeghead <smeghead@users.sourceforge.jp>

    * strcatを使用している部分を、simple_stringを使用するように修正した。
    * stackに1Mのバッファを取っている部分を、ヒープに確保するように変更した。
